RESOLVED FIXED270899
[iOS 17.4] 21+ layout tests assert under `WebPage::requestDocumentEditingContext`
https://bugs.webkit.org/show_bug.cgi?id=270899
Summary [iOS 17.4] 21+ layout tests assert under `WebPage::requestDocumentEditingCont...
Wenson Hsieh
Reported 2024-03-12 23:32:06 PDT
Attachments
Wenson Hsieh
Comment 1 2024-03-12 23:43:02 PDT
EWS
Comment 2 2024-03-13 20:00:08 PDT
Committed 276067@main (b8cacf190ad6): <https://commits.webkit.org/276067@main> Reviewed commits have been landed. Closing PR #25809 and removing active labels.
EWS
Comment 3 2024-05-09 18:19:37 PDT
Committed 272448.1007@safari-7618-branch (63e2ae2f61ea): <https://commits.webkit.org/272448.1007@safari-7618-branch> Reviewed commits have been landed. Closing PR #1274 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.